2012-06-07  Robert Boehne  <rboehne@users.sourceforge.net>
M       setup.py
M       sybasect.c
M       dist/config.guess
A       dist/release-0.40
M       doc/sybase.tex
M       Sybase.py
	* : Get ready to release the 0.40 version of python-sybase. :)

2012-06-06  Robert Boehne  <rboehne@users.sourceforge.net>

	* cmd.c: Revert to an earlier version of the NULL input handling
	code in CS_COMMAND_ct_setparam() that did nothing special
	for NULL inputs, which seems to be the only thing that I can
	get to actually work.

2011-12-07  Robert Boehne  <rboehne@users.sourceforge.net>

	* setup.py, Sybase.py, sybasect.c, doc/sybase.tex:
	Changing release to 0.40pre2
	* dist/release-0.40pre2: New file for 0.40pre2 release.

2011-05-05  Robert Boehne  <rboehne@users.sourceforge.net>

	* setup.py: Handle the path change for sybase when building
	a 64-bit version.

2010-12-13  Robert Boehne  <rboehne@users.sourceforge.net>

	* setup.py, Sybase.py, sybasect.c, doc/sybase.tex:
	Changing release to 0.40pre1
	* dist/release-0.40pre1: New file for 0.40pre1 release.

2010-12-13  Robert Boehne  <rboehne@users.sourceforge.net>

	* Sybase.py: Modify the DateTimeAsPython output conversion to
	return None when NULL is output.

2010-12-09  Robert Boehne  <rboehne@users.sourceforge.net>

	* Sybase.py: Use only spaces for indentation.

2010-09-29  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py: support for Python without threads

2010-04-20  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py: Ignore additional non-errors (1918 and 11932)

	* Sybase.py: Use outputmap in bulkcopy mode (thanks to patch by
	Cyrille Froehlich)

2009-06-04  Sébastien Sablé  <sable@users.sourceforge.net>

	* Raise exception when opening a cursor on a closed connection

	* tests/sybase_dbapi20.py: Added unitary test for bug 1768959 -
	executing a stored procedure

	* tests/sybase_dbapi20.py: Added unitary test for bug 1768935

	* datafmt.c (money_datafmt): Corrected money type when using