@@ -20,7 +20,7 @@ set_debug(sys.stderr)
 log = logging.getLogger("sybase")
 log.setLevel(logging.DEBUG)
 
-__version__ = '0.40'
+__version__ = '0.41'
 __revision__ = "$Revision$"
 
 # DB-API values
