@@ -253,10 +253,12 @@ The recognised properties are:
 \code{CS_SEC_DETECTREPLAY}     & \code{bool} \\
 \code{CS_SEC_DETECTSEQ}        & \code{bool} \\
 \code{CS_SEC_ENCRYPTION}       & \code{bool} \\
+\code{CS_SEC_EXTENDED_ENCRYPTION} & \code{bool} \\
 \code{CS_SEC_INTEGRITY}        & \code{bool} \\
 \code{CS_SEC_MUTUALAUTH}       & \code{bool} \\
 \code{CS_SEC_NEGOTIATE}        & \code{bool} \\
 \code{CS_SEC_NETWORKAUTH}      & \code{bool} \\
+\code{CS_SEC_EXTENDED_ENCRYPTION} & \code{bool} \\
 
 \code{CS_CON_STATUS}           & \code{int} \\
 \code{CS_LOOP_DELAY}           & \code{int} \\
