@@ -10,8 +10,8 @@
 % the rest is at your discretion.
 \authoraddress{E-mail: \email{djc@object-craft.com.au}}
 
-\release{0.40}
-\date{June 11, 2012}
+\release{0.41}
+\date{February 13, 2024}
 
 \makeindex			% tell \index to actually write the .idx file
 \makemodindex			% If this contains a lot of module sections.
